rust/pattern_c.rs

    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_dataset_header_t>())).values as *const _ as usize
        },
        166usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_dataset_header_t),
            "::",
            stringify!(values)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_dataset_header_t>())).profiles as *const _
                as usize
        },
        178usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_dataset_header_t),
            "::",
            stringify!(profiles)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_dataset_header_t>())).signatures as *const _
                as usize
        },
        190usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_dataset_header_t),
            "::",
            stringify!(signatures)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_dataset_header_t>())).signatureNodeOffsets
                as *const _ as usize
        },
        202usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_dataset_header_t),
            "::",
            stringify!(signatureNodeOffsets)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_dataset_header_t>())).nodeRankedSignatureIndexes
                as *const _ as usize
        },
        214usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_dataset_header_t),
            "::",
            stringify!(nodeRankedSignatureIndexes)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_dataset_header_t>())).rankedSignatureIndexes
                as *const _ as usize
        },
        226usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_dataset_header_t),
            "::",
            stringify!(rankedSignatureIndexes)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_dataset_header_t>())).nodes as *const _ as usize
        },
        238usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_dataset_header_t),
            "::",
            stringify!(nodes)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_dataset_header_t>())).rootNodes as *const _
                as usize
        },
        250usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_dataset_header_t),
            "::",
            stringify!(rootNodes)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_dataset_header_t>())).profileOffsets as *const _
                as usize
        },
        262usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_dataset_header_t),
            "::",
            stringify!(profileOffsets)
        )
    );
}
pub type fiftyoneDegreesDataSetHeader = fiftyoneDegrees_dataset_header_t;
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct fiftyoneDegrees_signature_t {
    pub nodeCount: byte,
    pub firstNodeOffsetIndex: i32,
    pub rank: i32,
    pub flags: byte,
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_signature_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_signature_t>(),
        10usize,
        concat!("Size of: ", stringify!(fiftyoneDegrees_signature_t))
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_signature_t>(),
        1usize,
        concat!("Alignment of ", stringify!(fiftyoneDegrees_signature_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_signature_t>())).nodeCount as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_signature_t),
            "::",
            stringify!(nodeCount)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_signature_t>())).firstNodeOffsetIndex as *const _
                as usize
        },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_signature_t),
            "::",
            stringify!(firstNodeOffsetIndex)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_signature_t>())).rank as *const _ as usize
        },
        5usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_signature_t),
            "::",
            stringify!(rank)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_signature_t>())).flags as *const _ as usize
        },
        9usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_signature_t),
            "::",
            stringify!(flags)
        )
    );
}
pub type fiftyoneDegreesSignature = fiftyoneDegrees_signature_t;
#[repr(C, packed(4))]
#[derive(Debug, Copy, Clone)]
pub struct fiftyoneDegrees_http_header_t {
    pub headerNameOffset: i32,
    pub headerName: *const ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_http_header_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_http_header_t>(),
        12usize,
        concat!("Size of: ", stringify!(fiftyoneDegrees_http_header_t))
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_http_header_t>(),
        4usize,
        concat!("Alignment of ", stringify!(fiftyoneDegrees_http_header_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_http_header_t>())).headerNameOffset as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_http_header_t),
            "::",
            stringify!(headerNameOffset)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_http_header_t>())).headerName as *const _
                as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_http_header_t),
            "::",
            stringify!(headerName)
        )
    );
}
pub type fiftyoneDegreesHttpHeader = fiftyoneDegrees_http_header_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fiftyoneDegrees_profile_struct_t {
    pub count: i32,
    pub profiles: *mut *mut fiftyoneDegreesProfile,
    pub indexes: *mut i32,
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_profile_struct_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_profile_struct_t>(),
        24usize,
        concat!("Size of: ", stringify!(fiftyoneDegrees_profile_struct_t))
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_profile_struct_t>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(fiftyoneDegrees_profile_struct_t)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_profile_struct_t>())).count as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_profile_struct_t),
            "::",
            stringify!(count)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_profile_struct_t>())).profiles as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_profile_struct_t),
            "::",
            stringify!(profiles)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_profile_struct_t>())).indexes as *const _
                as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_profile_struct_t),
            "::",
            stringify!(indexes)
        )
    );
}
pub type fiftyoneDegreesProfilesStruct = fiftyoneDegrees_profile_struct_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fiftyoneDegrees_profile_index_struct_t {
    pub count: i32,
    pub indexes: *mut i32,
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_profile_index_struct_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_profile_index_struct_t>(),
        16usize,
        concat!(
            "Size of: ",
            stringify!(fiftyoneDegrees_profile_index_struct_t)
        )
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_profile_index_struct_t>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(fiftyoneDegrees_profile_index_struct_t)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_profile_index_struct_t>())).count as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_profile_index_struct_t),
            "::",
            stringify!(count)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_profile_index_struct_t>())).indexes as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_profile_index_struct_t),
            "::",
            stringify!(indexes)
        )
    );
}
pub type fiftyoneDegreesProfileIndexesStruct = fiftyoneDegrees_profile_index_struct_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fiftyoneDegrees_profile_struct_array_t {
    pub initialised: i32,
    pub profilesStructs: *mut fiftyoneDegreesProfileIndexesStruct,
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_profile_struct_array_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_profile_struct_array_t>(),
        16usize,
        concat!(
            "Size of: ",
            stringify!(fiftyoneDegrees_profile_struct_array_t)
        )
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_profile_struct_array_t>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(fiftyoneDegrees_profile_struct_array_t)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_profile_struct_array_t>())).initialised
                as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_profile_struct_array_t),
            "::",
            stringify!(initialised)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_profile_struct_array_t>())).profilesStructs
                as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_profile_struct_array_t),
            "::",
            stringify!(profilesStructs)
        )
    );
}
